--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.2.1",
-    "@vercel/analytics": "^1.3.2",
-    "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1"
+    "@google/generative-ai": "^0.2.1",
+    "react-markdown": "^9.0.1",
+    "date-fns": "^3.3.1",
+    "react-pdf": "^7.7.1",
+    "@react-pdf/renderer": "^3.4.0",
+    "pdfjs-dist": "^4.0.379",
+    "react-dropzone": "^14.2.3",
+    "react-image-crop": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
