--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@react-pdf/renderer": "^3.4.0",
+    "@tailwindcss/vite": "^4.1.14",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
+    "pdfjs-dist": "^4.0.379",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@google/generative-ai": "^0.2.1",
-    "react-markdown": "^9.0.1",
-    "date-fns": "^3.3.1",
-    "react-pdf": "^7.7.1",
-    "@react-pdf/renderer": "^3.4.0",
-    "pdfjs-dist": "^4.0.379",
     "react-dropzone": "^14.2.3",
-    "react-image-crop": "^11.0.5"
+    "react-image-crop": "^11.0.5",
+    "react-markdown": "^9.0.1",
+    "react-pdf": "^7.7.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/node": "^24.6.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -33,9 +41,10 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
