--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-pdf/renderer": "^3.4.0",
     "@tailwindcss/vite": "^4.1.14",
