--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-image-crop": "^11.0.5",
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
+    "react-router-dom": "^7.9.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
