--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "npmConfig": {
+    "legacy-peer-deps": "true"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@radix-ui/react-icons": "^1.3.2",
